--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "graphql": "^16.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
